Fixed home page spacing

--- a/HokMob.App/ClientApp/src/app/home/home.component.scss
+++ b/HokMob.App/ClientApp/src/app/home/home.component.scss
@@ -6,6 +6,7 @@
   min-height: 500px;
   width: 100%;
   background-color: black;
+  padding-top: $spacing-small;
 
   .nav-menu {
     display: flex;
